--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,9 +1,10 @@
 {
   "accentColor": "",
-  "cssTheme": "Things",
+  "cssTheme": "Prism",
   "textFontFamily": "JetBrains Mono",
   "interfaceFontFamily": "JetBrains Mono",
   "monospaceFontFamily": "JetBrains Mono",
   "showViewHeader": true,
-  "translucency": false
+  "translucency": false,
+  "theme": "obsidian"
 }
