add notes on operating systems

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -6,5 +6,5 @@
   "monospaceFontFamily": "JetBrains Mono",
   "showViewHeader": true,
   "translucency": false,
-  "theme": "system"
+  "theme": "moonstone"
 }
